--- a/imports/ui/components/newAd/newAd.html
+++ b/imports/ui/components/newAd/newAd.html
@@ -69,11 +69,12 @@
   </center>
 </main>
 <script>
-  $('select').material_select();
+ $(document).ready(function() {
+    $('select').material_select();
   $('.datepicker').pickadate({
     selectMonths: true, // Creates a dropdown to control month
     selectYears: 15, // Creates a dropdown of 15 years to control year
     min: new Date()
   });
-  //$('.collapsible').collapsible();
+  });
 </script>
