--- a/imports/ui/components/roommates/roommates.html
+++ b/imports/ui/components/roommates/roommates.html
@@ -1,32 +1,18 @@
-<br> <br>
 <div class="row">
-  <div class="col s3">
-    <select multiple>
-      <option value="" disabled selected>Sort By</option>
-      <option value="Apartment">Price</option>
-      <option value="Town House">Location</option>
+   <div class="col s3">
+     <div class="input-field">
+    <select class="browser-default" ng-model="roommates.priceSort" ng-change="roommates.sortChanged()">
+       <option value="1" selected>Ascending</option>
+       <option value="-1">Descending</option>
     </select>
+     </div>
   </div>
-  <div class="col s3">
-    <select multiple>
-      <option value="" disabled selected>Sort By</option>
-      <option value="Apartment">Price</option>
-      <option value="Town House">Location</option>
+  <div>
+<select class="col s3" multiple ng-model="roommates.bedsSort" ng-change="roommates.bedsChanged()">
+      <option value=1>Beds 1</option>
+      <option value=2>Beds 2</option>
     </select>
-  </div>
-  <div class="col s3">
-    <select multiple>
-      <option value="" disabled selected>Sort By</option>
-      <option value="Apartment">Price</option>
-      <option value="Town House">Location</option>
-    </select>
-  </div>
-  <div class="col s3">
-    <select multiple>
-      <option value="" disabled selected>Sort By</option>
-      <option value="Apartment">Price</option>
-      <option value="Town House">Location</option>
-    </select>
+
   </div>
 </div>
 <div class="row">
@@ -51,6 +37,7 @@
     </select>
    </div>
   </div>-->
+
   <div dir-paginate="roommates in roommates.roommates | itemsPerPage: roommates.perPage" total-items="roommates.roommatesCount">
     <!--<div class="card-panel white  col s12 col l9 offset-l1">
           <div class="black-text left">
@@ -91,3 +78,9 @@
 </div>
 </div>
 <dir-pagination-controls on-page-change="roommates.pageChanged(newPageNumber)"></dir-pagination-controls>
+
+<script>
+ $(document).ready(function() {
+    $('select').material_select();
+  });
+</script>
