--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -61,7 +61,9 @@
       </li>
       <li><a class="brown-text text-darken-2" ui-sref="landingPage"><b>HOME</a></li>
       <li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="login"><b>SIGN IN</b></a></li>
-      <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="addRide"><b>POST A TRIP</b></a></li>
+      <li>
+        <a class="brown-text text-darken-2" ui-sref="newAd"><b>POST AN AD</b></a>
+      </li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="myRides" style="color: #795548"><b>MANAGE RIDES</b></a></li>
       <li ng-show="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ui-sref="changePwd" style="color: #795548"><b>Change Password</b></a></li>
       <!--<li ng-hide="sharegaadi.isLoggedIn"><a class="brown-text text-darken-2" ng-click="sharegaadi.openSignInModal(false)"><b>POST A TRIP</b></a></li>-->
