--- a/imports/ui/components/sharegaadi/sharegaadi.html
+++ b/imports/ui/components/sharegaadi/sharegaadi.html
@@ -32,15 +32,17 @@
   <div class="nav-wrapper white">
     <a href="/" class="brand-logo center">
       <b class="brown-text text-darken-2">&nbsp;&nbsp;WeDesi</b>
-      <span class="light orange-text text-darken-3" style="font-size: 12px"><b>Classifieds</b></span>
+      <span class="light orange-text text-darken-3" style="font-size: 12px"><b>Ads</b></span>
     </a>
     <a href="#" data-activates="mobile-demo" class="button-collapse brown-text text-darken-2">
       <i class="material-icons">menu</i></a>
     <ul class="hide-on-med-and-down">
        <li>
       </li>
-      <li>
-        <a class="brown-text text-darken-2" ui-sref="newAd"><b>POST AN AD</b></a>
+      <li>&nbsp;
+        <button class="btn waves-effect waves-light brown lighten-2" type="submit" ui-sref="newAd" name="action">POST AN AD
+        </button>
+        <!--<a class="brown-text text-darken-2" ui-sref="newAd"><b>POST AN AD</b></a>-->
       </li>
     </ul>
     <ul class="right hide-on-med-and-down">
