--- a/imports/ui/components/new/new.html
+++ b/imports/ui/components/new/new.html
@@ -1,40 +1,42 @@
-  <form>
+<form>
   <div class="input-field">
-                <select ng-model="new.form.subcategory" id="Category">
-              <option value="" disabled selected>Select Room Category</option>
-              <option value="Apartment">Apartment</option>
-              <option value="Town House">Town House</option>
-              <option value="Condo">Condo</option>
-              <option value="Single Family Home">Single Family Home</option>
-            </select>
-              </div>
-              <div class="input-field">
-                <label for="start_loc">Location</label>
-                <input required ng-model="new.form.location" placeholder="" details="new.form.placeDetails" googleplace
-                  id="start_loc" type="text" class="validate">
-              </div>
-              <div class="input-field">
-                <label for="beds">No. of Beds</label>
-                <input limit-to="3" ng-model="new.form.beds" id="beds" type="number" class="validate">
-              </div>
-              <div class="input-field">
-                <label for="price">Price</label>
-                <input limit-to="10" ng-model="new.form.price" id="price" type="number" class="validate">
-              </div>
-              <div class="input-field">
-                <label for="sqft">Sq.ft</label>
-                <input limit-to="10"  ng-model="new.form.sqft" id="sqft" type="number" class="validate">
-              </div>
-              <div class="input-field">
-                 <label for="date1">Available From</label>
-                <input required  type="date" class="datepicker" ng-model="new.form.dateFrom" id="date1">
-              </div>
-              <div class="input-field">
-                <label for="date2">Available To</label>
-                <input required  type="date" class="datepicker" ng-model="new.form.dateTo" id="date2">
-              </div>
-              <div></div>
-  </form>
+    <label for="start_loc">Location</label>
+    <input required ng-model="new.form.location" placeholder="" details="new.form.placeDetails" googleplace id="start_loc" type="text"
+      class="validate">
+  </div>
+  <div class="input-field row s12 l12 m12">
+    <span class="col s6 l6 m6">
+    <label for="price">Price</label>
+    <input limit-to="10" ng-model="new.form.price" id="price" type="number" class="validate">
+    </span>
+    <span class="col s6 l6 m6">
+      <select ng-model="newAd.form.per">
+        <option value="month" selected>Per Month</option>
+        <option value="week">Per Week</option>
+        <option value="day">Per Day</option>
+        <option value="year">Per Year</option>
+      </select>
+    </span>
+  </div>
+  <div class="input-field">
+    <label for="date1">Available From</label>
+    <input required type="date" class="datepicker" ng-model="new.form.dateFrom" id="date1">
+  </div>
+  <div class="input-field">
+    <label for="date2">Available To</label>
+    <input required type="date" class="datepicker" ng-model="new.form.dateTo" id="date2">
+  </div>
+  <div class="input-field">
+    <label for="sqft">Sq.ft</label>
+    <input limit-to="10" ng-model="new.form.sqft" id="sqft" type="number" class="validate">
+  </div>
+  <div class="input-field">
+    <label for="beds">No. of Beds</label>
+    <input limit-to="3" ng-model="new.form.beds" id="beds" type="number" class="validate">
+  </div>
+  
+  <div></div>
+</form>
 <script>
   $('select').material_select();
   $('ul.tabs').tabs();
